# LetsZoom

./: .gitignore  ARCHITECTURE_MFC.md  ARCHITECTURE_WIN32.md  BUILD.md  CMakeLists.txt  DESIGN_GUIDE_MFC.md  GITHUB_SETUP.md  IMPLEMENTATION_PLAN_MFC.md  LICENSE  Makefile  PRD.md  README.md  VS_CODE_SETUP.md
src/: drawing_overlay.c  drawing_overlay.h  hotkey.c  hotkey.h  main.c  settings.c  settings.h  tray.c  tray.h  zoom_overlay.c  zoom_overlay.h
